fixed css alignment

--- a/template/html/assets/style.css
+++ b/template/html/assets/style.css
@@ -39,5 +39,4 @@ span.icon{
 	margin:0;
 }
 select.form-control{
-	margin-bottom:20px;
 }
